# nume

./: Cargo.toml  README.md
crates/nu-data/: Cargo.toml
crates/nu-protocol/: Cargo.toml
crates/nu-value-ext/: Cargo.toml
src/: cli.rs  main.rs  prelude.rs
