[package]
name = "nume"
version = "0.32.1"
authors = ["The Nu Project Contributors"]
edition = "2018"

[workspace]
members = ["crates/*/"]

[dependencies]
async-trait = "0.1.42"
bigdecimal = { version = "0.2.0", features = ["serde"] }
futures = { version = "0.3.12", features = ["compat", "io-compat"] }
futures-util = "0.3.12"
indexmap = { version = "1.6.1", features = ["serde-1"] }
itertools = "0.10.0"
num-bigint = { version = "0.3.1", features = ["serde"] }
num-traits = "0.2.14"
parking_lot = "0.11.1"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.61"

### nushell crates

nu-data = { version = "0.32.1", path = "./crates/nu-data" }
nu-engine = { version = "0.32.1", path = "./crates/nu-engine" }
nu-errors = { version = "0.32.1", path = "./crates/nu-errors" }
nu-parser = { version = "0.32.1", path = "./crates/nu-parser" }
nu-protocol = { version = "0.32.1", path = "./crates/nu-protocol" }
nu-source = { version = "0.32.1", path = "./crates/nu-source" }
nu-stream = { version = "0.32.1", path = "./crates/nu-stream" }
nu-value-ext = { version = "0.32.1", path = "./crates/nu-value-ext" }
